fix: remove overflow: auto; in modal as it causes unecessary scrollbar

--- a/src/common/floq/components/FloqModal/styles.module.scss
+++ b/src/common/floq/components/FloqModal/styles.module.scss
@@ -5,7 +5,6 @@
   z-index: 1;
   top: 0;
   left: 0;
-  overflow: auto;
   text-align: center;
 
   width: 100%;
